# archetype

./: .gitignore  .travis.yml  README.md  app  com.github.kjlaw89.archetype.json  meson.build
data/: com.github.kjlaw89.archetype.appdata.xml  com.github.kjlaw89.archetype.desktop  com.github.kjlaw89.archetype.gresource.xml  com.github.kjlaw89.archetype.gschema.xml  meson.build
data/css/: style.css
data/licenses/: agpl-3.0-preamble.txt  apache-2.0-preamble.txt  custom-preamble.txt  gpl-3.0-preamble.txt  lgpl-3.0-preamble.txt  lgpl-3.0.txt  mit-preamble.txt  mit.txt  mpl-2.0-preamble.txt  unlicense-preamble.txt
debian/: changelog  control  copyright  rules
po/: com.github.kjlaw89.archetype.pot  pt_PT.po
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala  Settings.vala
src/controllers/: AppController.vala
src/models/: Template.vala
src/views/: AppView.vala
src/widgets/: ColorWidget.vala  HeaderBar.vala  LibraryRow.vala
tests/: assert.vala  test.vala
