sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',

    'models/Template.vala',
    
    'views/AppView.vala',

    'widgets/ColorWidget.vala',
    'widgets/HeaderBar.vala',
    'widgets/LibraryRow.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
